# Flower-MobilenetV2

./: LICENSE  README.md
fed-scaffold/: README.md  pyproject.toml
fed-scaffold/fed_scaffold/: __init__.py  client_app.py  server_app.py  task.py
fed-v2/: README.md  pyproject.toml
fed-v2/fed_v2/: __init__.py  client_app.py  server_app.py  task.py
