[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flair-federated"
version = "1.0.0"
description = "Federated Learning on FLAIR dataset with MobileNetV2"
dependencies = [
    "flwr[simulation]>=1.11.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app.config]
num-server-rounds = 200
fraction-fit = 0.0048
fraction-evaluate = 0
min-fit-clients = 200
min-evaluate-clients = 0
min-available-clients = 41131

[tool.flwr.app]
publisher = "flwr"

[tool.flwr.app.components]
serverapp = "fed_v2.server_app:app"
clientapp = "fed_v2.client_app:app"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 41131
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.25
